--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     />
     <meta
       name="keywords"
-      content="lokesh r, lokesh nivash, lokesh portfolio, lokesh, lokesh nivash portfolio"
+      content="lokesh, lokesh nivash, lokesh r, lokeshnivash, lokesh r nivash, lokeshnivash r, lokesh's portfolio, lokesh nivash's portfolio, lokesh r portfolio,
+      lokesh nivash graphic designer, lokesh r graphic designer, lokesh nivash 3d modeller, lokesh r 3d modeller, lokesh nivash animator, lokesh r animator, 
+      lokesh nivash mechatronics engineer, lokesh r mechatronics engineer, lokesh nivash web developer, lokesh r web developer, lokesh nivash frontend developer, 
+      lokesh r frontend developer, lokesh nivash full stack developer, lokesh r full stack developer, graphic designer portfolio, 3d modeller portfolio, 
+      animator portfolio, mechatronics engineer portfolio, web developer portfolio, frontend developer portfolio, full stack developer portfolio, portfolio showcase, 
+      digital portfolio, creative portfolio, professional portfolio, online portfolio, portfolio website, lokesh's instagram, lokesh's behance, lokesh's design portfolio"
     />
 
     <link rel="canonical" href="https://lokeshnivash.netlify.app/" />
