--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
           <section class="contact-form">
             <h3 class="h3 form-title">Contact Form</h3>
 
-            <form class="form" name="contact" action="success.html" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
+            <form class="form" name="contact" action="success.html" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" netlify>
               <input type="hidden" name="form-name" value="contact">
             
               <div class="input-wrapper">
