--- a/success.html
+++ b/success.html
@@ -5,6 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Sent | Lokesh</title>
     <link rel="stylesheet" href="success.css">
+    <meta name="author" content="lokesh" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="description"
+      content="Lokesh—Mechatronics Engineer, Web Developer, Animator, 3D Modeler, Video Editor—showcasing expertise across dynamic creative realms."
+    />
+    <meta
+      name="keywords"
+      content="lokesh, lokesh nivash, lokesh r, lokeshnivash, lokesh r nivash, lokeshnivash r, lokesh's portfolio, lokesh nivash's portfolio, lokesh r portfolio,
+      lokesh nivash graphic designer, lokesh r graphic designer, lokesh nivash 3d modeller, lokesh r 3d modeller, lokesh nivash animator, lokesh r animator, 
+      lokesh nivash mechatronics engineer, lokesh r mechatronics engineer, lokesh nivash web developer, lokesh r web developer, lokesh nivash frontend developer, 
+      lokesh r frontend developer, lokesh nivash full stack developer, lokesh r full stack developer, graphic designer portfolio, 3d modeller portfolio, 
+      animator portfolio, mechatronics engineer portfolio, web developer portfolio, frontend developer portfolio, full stack developer portfolio, portfolio showcase, 
+      digital portfolio, creative portfolio, professional portfolio, online portfolio, portfolio website, lokesh's instagram, lokesh's behance, lokesh's design portfolio"
+    />
+
+    <link rel="canonical" href="https://lokeshnivash.netlify.app/" />
+
+    <!-- TWITTER 1200 pixels wide x 675 -->
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image:src"
+      content="assets/images/metaimg/metaimg-1200x675.webp"
+    />
+    <meta name="twitter:title" content="Lokesh | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Lokesh—Mechatronics Engineer, Web Developer, Animator, 3D Modeler, Video Editor—showcasing expertise across dynamic creative realms."
+    />
+
+    <!-- FACEBOOK 1200 pixels x 630-->
+
+    <meta property="og:url" content="https://lokeshnivash.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Lokesh | Portfolio" />
+    <meta
+      property="og:description"
+      content="Lokesh—Mechatronics Engineer, Web Developer, Animator, 3D Modeler, Video Editor—showcasing expertise across dynamic creative realms."
+    />
+    <meta
+      property="og:image"
+      content="assets/images/metaimg/metaimg-1200x627.webp"
+    />
+
+    <!-- LIKEDIN  1200 x 627 pixels. -->
+
+    <meta property="og:title" content="Lokesh | Portfolio" />
+    <meta
+      property="og:description"
+      content="Lokesh—Mechatronics Engineer, Web Developer, Animator, 3D Modeler, Video Editor—showcasing expertise across dynamic creative realms."
+    />
+    <meta
+      property="og:image"
+      content="assets/images/metaimg/metaimg-1200x627.webp"
+    />
+    <meta property="og:url" content="https://lokeshnivash.netlify.app/" />
+
+    <!-- PINTERSET 1000x1500 -->
+
+    <meta name="og:title" content="Lokesh | Portfolio" />
+    <meta
+      name="og:description"
+      content="Lokesh—Mechatronics Engineer, Web Developer, Animator, 3D Modeler, Video Editor—showcasing expertise across dynamic creative realms."
+    />
+    <meta
+      name="og:image"
+      content="assets/images/metaimg/metaimg-1000x1500.png"
+    />
+    <meta name="og:url" content="https://lokeshnivash.netlify.app/" />
+
+    <!--- favicon-->
+
+    <link
+      rel="shortcut icon"
+      href="assets/favicon_io/favicon.ico"
+      type="image/x-icon"
+    />
+
 </head>
 <body>
         <div id="scene-container"> </div>
