--- a/index.html
+++ b/index.html
@@ -907,13 +907,13 @@
                     </div>
 
                     <img
-                      src="./assets/images/works/postereng.webp"
-                      alt="Engineer's day poster"
+                      src="./assets/images/works/custom-design-poster.jpg"
+                      alt="Custom design poster"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Marketing Poster</h3>
+                  <h3 class="project-title">Product Marketing Poster</h3>
 
                   <p class="project-category">Graphic Design</p>
                 </a>
@@ -938,6 +938,30 @@
                   </figure>
 
                   <h3 class="project-title">Screening Poster</h3>
+
+                  <p class="project-category">Graphic Design</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="graphic design"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/works/postereng.webp"
+                      alt="Engineer's day poster"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">Marketing Poster</h3>
 
                   <p class="project-category">Graphic Design</p>
                 </a>
