--- a/index.html
+++ b/index.html
@@ -970,6 +970,133 @@
               <li
                 class="project-item active"
                 data-filter-item
+                data-category="animations"
+              >
+                <a
+                  href="https://www.instagram.com/p/CqxYJ-_rpvh/?utm_source=ig_web_copy_link&igshid=ODhhZWM5NmIwOQ=="
+                >
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img
+                      src="./assets/images/urname.jpg"
+                      alt="your name 3d environment"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">3d modeling & animation</h3>
+
+                  <p class="project-category">Animations</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="animations"
+              >
+                <a
+                  href="https://www.instagram.com/p/Cvhhu7ZrnHs/?utm_source=ig_web_copy_link&igshid=ODhhZWM5NmIwOQ=="
+                >
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img
+                      src="./assets/images/robot.jpg"
+                      alt="robot 3d model"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">3d modeling & animation</h3>
+
+                  <p class="project-category">Animations</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="animations"
+              >
+                <a
+                  href="https://www.instagram.com/reel/CuhsVFcAm_l/?utm_source=ig_web_copy_link&igsh=MjJkMmIyYzQxYw=="
+                >
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img
+                      src="./assets/images/works/forest-animation.jpg"
+                      alt="forest animation"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">3d modeling & animation</h3>
+
+                  <p class="project-category">Animations</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="animations"
+              >
+                <a
+                  href="https://www.instagram.com/p/CrBf5eAAdJ7/?utm_source=ig_web_copy_link&igshid=ODhhZWM5NmIwOQ=="
+                >
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img
+                      src="./assets/images/roll.jpg"
+                      alt="sci-fic 3d model"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">3d modeling & animation</h3>
+
+                  <p class="project-category">Animations</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="animations"
+              >
+                <a
+                  href="https://www.instagram.com/p/Cqu199ILU9N/?utm_source=ig_web_copy_link&igshid=ODhhZWM5NmIwOQ=="
+                >
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img
+                      src="./assets/images/world.jpg"
+                      alt="Earth 3d model"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">3d modeling & animation</h3>
+
+                  <p class="project-category">Animations</p>
+                </a>
+              </li>
+
+              
+
+              <li
+                class="project-item active"
+                data-filter-item
                 data-category="web development"
               >
                 <a href="#">
@@ -1060,106 +1187,6 @@
                   <h3 class="project-title">Weebieshub</h3>
 
                   <p class="project-category">Web development</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="animations"
-              >
-                <a
-                  href="https://www.instagram.com/p/CqxYJ-_rpvh/?utm_source=ig_web_copy_link&igshid=ODhhZWM5NmIwOQ=="
-                >
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-                    <img
-                      src="./assets/images/urname.jpg"
-                      alt="your name 3d environment"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">3d modeling & animation</h3>
-
-                  <p class="project-category">Animations</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="animations"
-              >
-                <a
-                  href="https://www.instagram.com/p/Cvhhu7ZrnHs/?utm_source=ig_web_copy_link&igshid=ODhhZWM5NmIwOQ=="
-                >
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-                    <img
-                      src="./assets/images/robot.jpg"
-                      alt="robot 3d model"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">3d modeling & animation</h3>
-
-                  <p class="project-category">Animations</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="animations"
-              >
-                <a
-                  href="https://www.instagram.com/p/CrBf5eAAdJ7/?utm_source=ig_web_copy_link&igshid=ODhhZWM5NmIwOQ=="
-                >
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-                    <img
-                      src="./assets/images/roll.jpg"
-                      alt="sci-fic 3d model"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">3d modeling & animation</h3>
-
-                  <p class="project-category">Animations</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="animations"
-              >
-                <a
-                  href="https://www.instagram.com/p/Cqu199ILU9N/?utm_source=ig_web_copy_link&igshid=ODhhZWM5NmIwOQ=="
-                >
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-                    <img
-                      src="./assets/images/world.jpg"
-                      alt="Earth 3d model"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">3d modeling & animation</h3>
-
-                  <p class="project-category">Animations</p>
                 </a>
               </li>
 
