--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta
       name="keywords"
       content="lokesh, lokesh nivash, lokesh r, lokeshnivash, lokesh r nivash, lokeshnivash r, lokesh's portfolio, lokesh nivash's portfolio, lokesh r portfolio,
-      lokesh nivash graphic designer, lokesh r graphic designer, lokesh nivash 3d modeller, lokesh r 3d modeller, lokesh nivash animator, lokesh r animator, 
+      lokesh nivash graphic designer,weebieshub, weebies hub, whub, weebies-hub, weebieshub linkedin, weebieshub instagram, weebieshub github, weebieshub lokesh, 
+      founder weebieshub, founder of weebieshub,ceo weebieshub, ceo of weebieshub, lokesh r graphic designer, lokesh nivash 3d modeller, lokesh r 3d modeller, lokesh nivash animator, lokesh r animator, 
       lokesh nivash mechatronics engineer, lokesh r mechatronics engineer, lokesh nivash web developer, lokesh r web developer, lokesh nivash frontend developer, 
       lokesh r frontend developer, lokesh nivash full stack developer, lokesh r full stack developer, graphic designer portfolio, 3d modeller portfolio, 
       animator portfolio, mechatronics engineer portfolio, web developer portfolio, frontend developer portfolio, full stack developer portfolio, portfolio showcase, 
@@ -420,21 +421,21 @@
                 </div>
               </li>
 
-              <!-- <li class="service-item">
+              <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/entrepreneurship.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Entrepreneur</h4>
 
                 <p class="service-item-text">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero voluptatem rem recusandae quod aspernatur, maiores dolore placeat, illum accusamus distinctio sunt reiciendis eaque obcaecati quasi iusto, soluta magni aut provident.   
+                  I'm the founder of Weebies Hub, an online store for anime-inspired fashion and cosplay essentials. Our passion lies in merging anime culture with trendy clothing that reflects beloved characters. We aim to create an immersive experience for anime enthusiasts worldwide, serving as the go-to destination for stylish attire celebrating their love for anime.
                 </p>
               </div>
 
-              </li> -->
+              </li>
             </ul>
           </section>
           <!--
@@ -703,6 +704,20 @@
                 </p>
               </li>
 
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Founder</h4>
+                <h4 class="h4 timeline-item-title">Weebies Hub</h4>
+
+                <span>2023 — Present</span>
+
+                <p class="timeline-text">
+                  As Weebies Hub's founder, I oversee strategy, brand development, product curation, 
+                  and team leadership. My role involves guiding our anime-inspired fashion and cosplay essentials, 
+                  shaping marketing strategies, and ensuring top-notch operations while staying tuned to industry trends 
+                  and engaging our community.
+                </p>
+              </li>
+              
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">3D ANIMATOR</h4>
                 <h4 class="h4 timeline-item-title">3DEZINE.FX</h4>
