--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
-              src="assets/images/loki-vector-img-blck.svg"
+              src="assets/images/loki.jpg"
               alt="Lokesh"
               width="80"
             />
