--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@
               <li class="clients-item">
                 <a href="#">
                   <img
-                    src="./assets/images/works/postereng.webp"
-                    alt="engineer's day poster"
+                    src="./assets/images/works/custom-design-poster.jpg"
+                    alt="custom design poster"
                   />
                 </a>
               </li>
@@ -603,27 +603,20 @@
               <li class="clients-item">
                 <a href="#">
                   <img
-                    src="./assets/images/works/juju.png"
-                    alt="jujutsu kaisen"
+                    src="./assets/images/works/postereng.webp"
+                    alt="engineer's day poster"
                   />
                 </a>
               </li>
 
               <li class="clients-item">
-                <a href="https://github.com/LokeshNivash/zerog.git">
+                <a href="#">
                   <img
-                    src="./assets/images/works/carrent.png"
-                    style="height: 150px; width: auto"
-                    alt="zero-g website"
+                    src="./assets/images/works/juju.png"
+                    alt="jujutsu kaisen"
                   />
                 </a>
               </li>
-
-              <!-- <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
-              </a>
-            </li> -->
             </ul>
           </section>
         </article>
@@ -837,12 +830,12 @@
         - #PORTFOLIO
       -->
 
-        <article class="portfolio" data-page="portfolio">
+        <article id="portfolio" class="portfolio" data-page="portfolio">
           <header>
             <h2 class="h2 article-title">Portfolio</h2>
           </header>
 
-          <section class="projects">
+          <section class="projects" id="projects">
             <ul class="filter-list">
               <li class="filter-item">
                 <button class="active" data-filter-btn>All</button>
