--- a/index.html
+++ b/index.html
@@ -1008,6 +1008,25 @@
                 </div>
               </li>
 
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="video editing"
+              >
+                <div id="video-container">
+                  <iframe
+                    width="300px"
+                    height="400px"
+                    src="https://www.youtube.com/embed/NO6zK2qg2D4?si=C5HvJ47TGD8cshOe&amp;controls=0"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                    style="border: 3px solid #ffda6b; border-radius: 5px"
+                  ></iframe>
+                </div>
+              </li>
+
               <!-- <div id="video-container">
                 
                 <iframe
