--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="lokesh, lokesh nivash, lokesh r, lokeshnivash, lokesh r nivash, lokeshnivash r, lokesh's portfolio, lokesh nivash's portfolio, lokesh r portfolio,
+      content="lokesh, lokesh nivash, lokesh r,lokesh mechatronics,lokesh mechatronics engineer, lokeshnivash, lokesh r nivash, lokeshnivash r, lokesh's portfolio, lokesh nivash's portfolio, lokesh r portfolio,
       lokesh nivash graphic designer,weebieshub, weebies hub, whub, weebies-hub, weebieshub linkedin, weebieshub instagram, weebieshub github, weebieshub lokesh, 
       founder weebieshub, founder of weebieshub,ceo weebieshub, ceo of weebieshub, lokesh r graphic designer, lokesh nivash 3d modeller, lokesh r 3d modeller, lokesh nivash animator, lokesh r animator, 
       lokesh nivash mechatronics engineer, lokesh r mechatronics engineer, lokesh nivash web developer, lokesh r web developer, lokesh nivash frontend developer, 
