--- a/index.html
+++ b/index.html
@@ -566,6 +566,12 @@
           <!--
           - clients
         -->
+        <div>
+          <a href="https://www.fiverr.com/lokesh_nivash29" target="_blank" class="form-btn">
+            <img src="assets/images/hiremeicon.png" alt="Paper Plane Icon" class="icon-img" width="25" height="25">
+            Hire me
+          </a>
+        </div><br>
 
           <section class="clients">
             <h3 class="h3 clients-title">Works</h3>
