--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta
       name="keywords"
       content="lokesh, lokesh nivash, lokesh r,lokesh mechatronics,lokesh mechatronics engineer, lokeshnivash, lokesh r nivash, lokeshnivash r, lokesh's portfolio, lokesh nivash's portfolio, lokesh r portfolio,
-      lokesh nivash graphic designer,weebieshub, weebies hub, whub, weebies-hub, weebieshub linkedin, weebieshub instagram, weebieshub github, weebieshub lokesh, 
+      lokesh nivash graphic designer,weebieshub, weebies hub,weebies hub shop, weebieshub.shop, whub, weebies-hub, weebieshub linkedin, weebieshub instagram, weebieshub github, weebieshub lokesh, 
       founder weebieshub, founder of weebieshub,ceo weebieshub, ceo of weebieshub, lokesh r graphic designer, lokesh nivash 3d modeller, lokesh r 3d modeller, lokesh nivash animator, lokesh r animator, 
       lokesh nivash mechatronics engineer, lokesh r mechatronics engineer, lokesh nivash web developer, lokesh r web developer, lokesh nivash frontend developer, 
       lokesh r frontend developer, lokesh nivash full stack developer, lokesh r full stack developer, graphic designer portfolio, 3d modeller portfolio, 
@@ -1249,7 +1249,7 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="https://whub.netlify.app/">
+                <a href="https://weebieshub.shop/">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
