--- a/index.html
+++ b/index.html
@@ -275,6 +275,14 @@
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </li>
+            <li class="social-item">
+              <a
+                href="https://github.com/LokeshNivash/"
+                class="social-link"
+              >
+                <ion-icon name="logo-github"></ion-icon>
+              </a>
+            </li>
           </ul>
         </div>
       </aside>
@@ -422,21 +430,53 @@
               </li>
 
               <li class="service-item">
-
               <div class="service-icon-box">
                 <img src="./assets/images/entrepreneurship.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Entrepreneur</h4>
+                <h4 class="h4 service-item-title">Shine Up</h4>
 
                 <p class="service-item-text">
-                  I'm the founder of Weebies Hub, an online store for anime-inspired fashion and cosplay essentials. Our passion lies in merging anime culture with trendy clothing that reflects beloved characters. We aim to create an immersive experience for anime enthusiasts worldwide, serving as the go-to destination for stylish attire celebrating their love for anime.
-                </p>
+                  As the founder of Shine Up, I lead a team providing top-notch services in web development, video editing, animation, graphic design, product photography, SEO management, and social media handling. With our expertise, we've successfully collaborated with over 5 clients from diverse sectors, delivering exceptional results and exceeding expectations.
+                </p><br>
+                <h4 class="h4 service-item-title">
+                "Time To Shine Up"
+                </h4>
               </div>
-
               </li>
+
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img src="./assets/images/entrepreneurship.png" alt="camera icon" width="40">
+                </div>
+  
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Entrepreneur</h4>
+                  <h4 class="h4 service-item-title">Weebies Hub</h4>
+  
+                  <p class="service-item-text">
+                    I'm the founder of Weebies Hub, an online store for anime-inspired fashion and cosplay essentials. Our passion lies in merging anime culture with trendy clothing that reflects beloved characters. We aim to create an immersive experience for anime enthusiasts worldwide, serving as the go-to destination for stylish attire celebrating their love for anime.
+                  </p>
+                </div>
+                </li>
             </ul>
+          </section>
+
+          <section class="counters">
+            <div class="container-counter">
+              <div>
+                <div class="counter" data-target="5" data-text="+" style="color: gold; font-size:70px">0 </div><p>+</p>
+                <h4 class="h4 service-item-title">Clients</h4>
+              </div>
+            </div>
+            <div class="counters-button">
+              <a href="https://www.fiverr.com/lokesh_nivash29" target="_blank" class="form-btn">
+                <img src="assets/images/hiremeicon.png" alt="Paper Plane Icon" class="icon-img" width="25" height="25">
+                Work with us
+              </a>
+            </div><br>
           </section>
           <!--
           - testimonials
@@ -566,12 +606,6 @@
           <!--
           - clients
         -->
-        <div>
-          <a href="https://www.fiverr.com/lokesh_nivash29" target="_blank" class="form-btn">
-            <img src="assets/images/hiremeicon.png" alt="Paper Plane Icon" class="icon-img" width="25" height="25">
-            Hire me
-          </a>
-        </div><br>
 
           <section class="clients">
             <h3 class="h3 clients-title">Works</h3>
@@ -688,18 +722,25 @@
             </div>
 
             <ol class="timeline-list">
+              
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Web Developer</h4>
-                <h4 class="h4 timeline-item-title">ZERO-G</h4>
+                <h4 class="h4 timeline-item-title">Graphic Designer & Video Editor</h4>
+                <h4 class="h4 timeline-item-title">Galaxy Medias</h4>
 
-                <span>2023 — 2024</span>
+                <span>2024 — 2024</span>
 
                 <p class="timeline-text">
-                  Designed, implemented and monitored web pages, plugins and
-                  functionality for continuous improvement. Planned website
-                  development, converting mockups into usable web presence with
-                  HTML, JavaScript, CSS, and REACT coding. Developed technical
-                  solutions required to accommodate specific user-facing assets
+                  As a Graphic Designer and Video Editor at Galaxy Media, I specialize in crafting engaging content for a diverse range of platforms including social media, television shows, promos, trailers, and web projects. My responsibilities encompass video editing, graphic design for marketing materials, SEO optimization, and creating compelling banners and posters. I excel in delivering visually captivating and impactful content that resonates with target audiences across various digital mediums.
+                </p>
+              </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Founder</h4>
+                <h4 class="h4 timeline-item-title">Shine Up</h4>
+
+                <span>2023 — Present</span>
+
+                <p class="timeline-text">
+                  As the founder of Shine Up, I lead a team providing top-notch services in web development, video editing, animation, graphic design, product photography, SEO management, and social media handling. With our expertise, we've successfully collaborated with over 5 clients from diverse sectors, delivering exceptional results and exceeding expectations.
                 </p>
               </li>
 
@@ -732,6 +773,21 @@
                   real-time 3D game applications. Conceptualized compelling 3D
                   animations, visual effects and motion graphics for logos,
                   symbols, backgrounds and special features
+                </p>
+              </li>
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Web Developer</h4>
+                <h4 class="h4 timeline-item-title">ZERO-G</h4>
+
+                <span>2023 — 2024</span>
+
+                <p class="timeline-text">
+                  Designed, implemented and monitored web pages, plugins and
+                  functionality for continuous improvement. Planned website
+                  development, converting mockups into usable web presence with
+                  HTML, JavaScript, CSS, and REACT coding. Developed technical
+                  solutions required to accommodate specific user-facing assets
                 </p>
               </li>
 
