--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
               </div>
             </div>
             <div class="counters-button">
-              <a href="https://www.fiverr.com/lokesh_nivash29" target="_blank" class="form-btn">
+              <a href="mailto:nivashnisa@gmail.com" target="_blank" class="form-btn">
                 <img src="assets/images/hiremeicon.png" alt="Paper Plane Icon" class="icon-img" width="25" height="25">
                 Work with us
               </a>
